CI-CD-Jenkins-Pipeline/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  progressDeadlineSeconds: 600
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: kenzieeiy/mern-cicd-frontend:4
        ports:
        - containerPort: 3000           # ✅ serve listens on 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000                  # ✅ Change probe port
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 3000                  # ✅ Change probe port
          initialDelaySeconds: 10
          periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
  - port: 3000
    targetPort: 3000                   # ✅ Match serve port
  type: ClusterIP
